--- a/index.html
+++ b/index.html
@@ -2,42 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>User Registration Form</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Secure Payment Portal</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="container">
+    <h2>Payment Portal</h2>
 
-  <h1>Register Now</h1>
+    <form>
+      <div class="section">
+        <label for="name">Full Name</label>
+        <input type="text" id="name" name="name" placeholder="John Doe" required>
+        
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" placeholder="john@example.com" required>
+        
+        <label for="address">Billing Address</label>
+        <input type="text" id="address" name="address" placeholder="123 Street, City" required>
+      </div>
 
-  <form action="#" method="post">
-    <label for="name">Full Name:</label>
-    <input type="text" id="name" name="name" required>
+      <div class="section">
+        <label for="cardnumber">Card Number</label>
+        <input type="tel" id="cardnumber" name="cardnumber" maxlength="19" placeholder="1234 5678 9012 3456" required>
 
-    <label for="email">Email Address:</label>
-    <input type="email" id="email" name="email" required>
+        <label for="expiry">Expiry Date</label>
+        <input type="text" id="expiry" name="expiry" placeholder="MM/YY" required>
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required minlength="6">
+        <label for="cvv">CVV</label>
+        <input type="number" id="cvv" name="cvv" placeholder="123" required>
+      </div>
 
-    <label>Gender:</label>
-    <label><input type="radio" name="gender" value="male" required> Male</label>
-    <label><input type="radio" name="gender" value="female"> Female</label>
-
-    <label for="dob">Date of Birth:</label>
-    <input type="date" id="dob" name="dob">
-
-    <label for="country">Country:</label>
-    <select id="country" name="country" required>
-      <option value="">Select</option>
-      <option value="india">India</option>
-      <option value="usa">USA</option>
-      <option value="uk">UK</option>
-    </select>
-
-    <label><input type="checkbox" required> I agree to the terms & conditions</label>
-
-    <button type="submit">Register</button>
-  </form>
-
+      <input type="submit" value="Pay Now">
+    </form>
+  </div>
 </body>
 </html>
+
